--- a/src/com/gitlab/bfalecki/proo/plantsimulator/gui/GuiDesigner.form
+++ b/src/com/gitlab/bfalecki/proo/plantsimulator/gui/GuiDesigner.form
@@ -43,23 +43,29 @@
                       <text value="Fusarium Oxysoprum"/>
                     </properties>
                   </component>
-                  <component id="6885e" class="javax.swing.JButton" binding="button3" default-binding="true">
+                  <component id="6885e" class="javax.swing.JButton" binding="reduceButton4" default-binding="true">
                     <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="90" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="reduce"/>
                     </properties>
                   </component>
-                  <component id="89981" class="javax.swing.JButton" binding="button4" default-binding="true">
+                  <component id="89981" class="javax.swing.JButton" binding="reduceButton3" default-binding="true">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="90" height="-1"/>
+                        <preferred-size width="90" height="-1"/>
+                        <maximum-size width="90" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="reduce"/>
                     </properties>
                   </component>
-                  <component id="7d318" class="javax.swing.JLabel">
+                  <component id="7d318" class="javax.swing.JLabel" binding="fusOxysLab">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -67,7 +73,7 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="19566" class="javax.swing.JLabel">
+                  <component id="19566" class="javax.swing.JLabel" binding="ErysiphLab">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -93,15 +99,17 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="4438c" class="javax.swing.JButton" binding="button8" default-binding="true">
+                  <component id="4438c" class="javax.swing.JButton" binding="reduceButton" default-binding="true">
                     <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="90" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="reduce"/>
                     </properties>
                   </component>
-                  <component id="8e7b6" class="javax.swing.JLabel">
+                  <component id="8e7b6" class="javax.swing.JLabel" binding="airPollLab">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -117,12 +125,14 @@
                       <text value="Air pollution"/>
                     </properties>
                   </component>
-                  <component id="119da" class="javax.swing.JButton" binding="button11" default-binding="true">
+                  <component id="119da" class="javax.swing.JButton" binding="reduceButton1" default-binding="true">
                     <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="90" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="reduce"/>
                     </properties>
                   </component>
                   <component id="f5cdb" class="javax.swing.JLabel">
@@ -133,7 +143,7 @@
                       <text value="Soil pollution"/>
                     </properties>
                   </component>
-                  <component id="8fc66" class="javax.swing.JLabel">
+                  <component id="8fc66" class="javax.swing.JLabel" binding="soiPollLab">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -141,15 +151,17 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="f022a" class="javax.swing.JButton" binding="button12" default-binding="true">
+                  <component id="f022a" class="javax.swing.JButton" binding="reduceButton2" default-binding="true">
                     <constraints>
-                      <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="90" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="reduce"/>
                     </properties>
                   </component>
-                  <component id="f40b" class="javax.swing.JLabel">
+                  <component id="f40b" class="javax.swing.JLabel" binding="dustLab">
                     <constraints>
                       <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -179,7 +191,9 @@
                 <children>
                   <component id="58fc8" class="javax.swing.JButton" binding="button1" default-binding="true">
                     <constraints>
-                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="60" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
                       <text value="-"/>
@@ -187,13 +201,15 @@
                   </component>
                   <component id="2e75" class="javax.swing.JButton" binding="button2" default-binding="true">
                     <constraints>
-                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="60" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
                       <text value="+"/>
                     </properties>
                   </component>
-                  <component id="64db4" class="javax.swing.JLabel">
+                  <component id="64db4" class="javax.swing.JLabel" binding="insolLab">
                     <constraints>
                       <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -201,7 +217,7 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="3bc49" class="javax.swing.JLabel">
+                  <component id="3bc49" class="javax.swing.JLabel" binding="irrigLab">
                     <constraints>
                       <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -209,7 +225,7 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="74260" class="javax.swing.JLabel">
+                  <component id="74260" class="javax.swing.JLabel" binding="tempLab">
                     <constraints>
                       <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -217,7 +233,7 @@
                       <text value="Label"/>
                     </properties>
                   </component>
-                  <component id="c1b0a" class="javax.swing.JLabel">
+                  <component id="c1b0a" class="javax.swing.JLabel" binding="phLab">
                     <constraints>
                       <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
@@ -227,42 +243,52 @@
                   </component>
                   <component id="4bdb1" class="javax.swing.JButton" binding="button5" default-binding="true">
                     <constraints>
-                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="60" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="-"/>
                     </properties>
                   </component>
                   <component id="68594" class="javax.swing.JButton" binding="button6" default-binding="true">
                     <constraints>
-                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="60" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="-"/>
                     </properties>
                   </component>
                   <component id="4a2d3" class="javax.swing.JButton" binding="button7" default-binding="true">
                     <constraints>
-                      <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="60" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="+"/>
                     </properties>
                   </component>
                   <component id="e13b1" class="javax.swing.JButton" binding="button9" default-binding="true">
                     <constraints>
-                      <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="2" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="60" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="+"/>
                     </properties>
                   </component>
                   <component id="1e1c2" class="javax.swing.JButton" binding="button10" default-binding="true">
                     <constraints>
-                      <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <maximum-size width="60" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
-                      <text value="Button"/>
+                      <text value="+"/>
                     </properties>
                   </component>
                   <component id="60e6b" class="javax.swing.JLabel">
