--- a/src/com/gitlab/bfalecki/proo/plantsimulator/gui/GuiDesigner.form
+++ b/src/com/gitlab/bfalecki/proo/plantsimulator/gui/GuiDesigner.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.gitlab.bfalecki.proo.plantsimulator.gui.GuiDesigner">
-  <grid id="27dc6" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="598" height="652"/>
@@ -8,6 +8,9 @@
     <properties>
       <alignmentX value="0.4"/>
       <alignmentY value="0.4"/>
+      <maximumSize width="2147483647" height="240"/>
+      <minimumSize width="326" height="240"/>
+      <preferredSize width="326" height="230"/>
     </properties>
     <border type="none">
       <title-color color="-4473925"/>
@@ -15,7 +18,10 @@
     <children>
       <grid id="2eb44" binding="generalPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
         <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="0" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="322" height="360"/>
+            <maximum-size width="400" height="400"/>
+          </grid>
         </constraints>
         <properties/>
         <border type="line">
@@ -330,6 +336,13 @@
           <component id="7b76" class="javax.swing.JProgressBar" binding="progressBar1" default-binding="true">
             <constraints border-constraint="Center"/>
             <properties>
+              <borderPainted value="false"/>
+              <doubleBuffered value="false"/>
+              <enabled value="false"/>
+              <focusCycleRoot value="true"/>
+              <focusTraversalPolicyProvider value="true"/>
+              <focusable value="false"/>
+              <maximumSize width="32767" height="40"/>
               <string value="Current Operation 60%"/>
               <stringPainted value="true"/>
               <value value="47"/>
@@ -349,6 +362,32 @@
           </component>
         </children>
       </grid>
+      <component id="28d50" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="hours: 2"/>
+        </properties>
+      </component>
+      <component id="63cd5" class="javax.swing.JSlider" binding="slider1" default-binding="true">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <focusTraversalPolicyProvider value="false"/>
+          <minimum value="0"/>
+          <name value="speedSlider"/>
+        </properties>
+      </component>
+      <component id="5d9b8" class="javax.swing.JLabel">
+        <constraints>
+          <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="speed: x100"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
